// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple choices 1`] = `
<form
  class="s-_xyHwNw5vPU9"
  role="dialog"
>
  <section
    class="pane s-j2LTsWktqK_4"
    style="--bg: var(--primary-lightest);"
  >
    <h2
      class="s-j2LTsWktqK_4"
    >
      Réglages du jeu
    </h2>
    
     
    <section
      class="s-_xyHwNw5vPU9"
    >
      <label
        class="s-AFGyPIu2lLfy"
        for="side"
      >
        Couleur : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="has-text s-NMyTiX1zi6rz"
            id="side"
            role="combobox"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              
              <span
                class="text s-NMyTiX1zi6rz"
              >
                <span
                  class="s-rGIwyFRHo8D9"
                  slot="text"
                >
                  black
                </span>
              </span>
              
               
              <i
                class="material-icons arrow s-rGIwyFRHo8D9"
                role="button"
                tabindex="-1"
              >
                arrow_drop_down
              </i>
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
      </span>
      <!--&lt;Choice&gt;-->
      
      <label
        class="s-AFGyPIu2lLfy"
        for="position"
      >
        Suite : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="has-text s-NMyTiX1zi6rz"
            id="position"
            role="combobox"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              
              <span
                class="text s-NMyTiX1zi6rz"
              >
                <span
                  class="s-rGIwyFRHo8D9"
                  slot="text"
                >
                  Trèfle
                </span>
              </span>
              
               
              <i
                class="material-icons arrow s-rGIwyFRHo8D9"
                role="button"
                tabindex="-1"
              >
                arrow_drop_down
              </i>
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
        <img
          alt=""
          class="s-AFGyPIu2lLfy"
          src="http://localhost:3001/games/assets/images/clubs-1.1.svg"
        />
      </span>
      <!--&lt;Choice&gt;-->
      
    </section>
     
    <div
      class="s-_xyHwNw5vPU9"
    >
      <button
        class="has-text s-NMyTiX1zi6rz"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          
          <span
            class="text s-NMyTiX1zi6rz"
          >
            Jouer
          </span>
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </div>
  </section>
  <!--&lt;Pane&gt;-->
</form>
`;

exports[`Single choice 1`] = `
<form
  class="s-_xyHwNw5vPU9"
  role="dialog"
>
  <section
    class="pane s-j2LTsWktqK_4"
    style="--bg: var(--primary-lightest);"
  >
    <h2
      class="s-j2LTsWktqK_4"
    >
      Réglages du jeu
    </h2>
    
     
    <section
      class="s-_xyHwNw5vPU9"
    >
      <label
        class="s-AFGyPIu2lLfy"
        for="side"
      >
        Couleur : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="has-text s-NMyTiX1zi6rz"
            id="side"
            role="combobox"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                color_lens
              </span>
              
              <span
                class="text s-NMyTiX1zi6rz"
              >
                <span
                  class="s-rGIwyFRHo8D9 color"
                  slot="text"
                  style="--color: black;"
                >
                  
                </span>
              </span>
              
               
              <i
                class="material-icons arrow s-rGIwyFRHo8D9"
                role="button"
                tabindex="-1"
              >
                arrow_drop_down
              </i>
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
      </span>
      <!--&lt;Choice&gt;-->
      
    </section>
     
    <div
      class="s-_xyHwNw5vPU9"
    >
      <button
        class="has-text s-NMyTiX1zi6rz"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          
          <span
            class="text s-NMyTiX1zi6rz"
          >
            Jouer
          </span>
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </div>
  </section>
  <!--&lt;Pane&gt;-->
</form>
`;
